# hackrx-medassist-ai

./: CLAUDE.md  PRD  PRD.md  README.md
backend/: .dockerignore  .env.sample  .gitignore  Dockerfile  README.md  docker-compose.yml  justfile  pyproject.toml
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: api.py
backend/app/api/v1/endpoints/: health.py  patients.py  services.py
backend/app/config/: settings.py
backend/app/core/: security.py
backend/app/models/: health.py  ollama.py  patient.py  services.py
backend/app/services/data/: patient_service.py  summary_service.py
backend/app/services/llm/: ollama_client.py  prompt_manager.py
backend/app/services/llm/pipelines/: clinical_summary.py
backend/data/processed/: allergies.parquet  careplans.parquet  conditions.parquet  immunizations.parquet  organizations.parquet  patients.parquet  payers.parquet  providers.parquet
backend/data/summaries/: generated_summaries.json  generated_summaries_optimized.json
backend/prompts/: clinical_summary.py
backend/scripts/: data_processing.py
backend/scripts/reference/: prevalent_conditions.py  prevalent_conditions.txt  unique_patients.txt
frontend/: consultation.html  consultation.js  index.html  next.config.mjs  package-lock.json  package.json  patient-details.html  patient-details.js  script.js  styles.css  tailwind.config.js  test-api-integration-data.js  test-api-updated.js  test-api.js  test-combined-search.js  test-search-final.js  test-search-integration.js  test.html  vercel.json
medassist/: package-lock.json  package.json
(+53 files in other folders)
